checkout updates
